--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,14 +13,39 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: set up JDK 11
+    
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
+        cache: 'npm'
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Build web app
+      run: npm run build
+
+    - name: Set up JDK 11
       uses: actions/setup-java@v4
       with:
         java-version: '11'
         distribution: 'temurin'
         cache: gradle
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
+    - name: Verify gradlew exists and is executable
+      run: |
+        if [ -f android/gradlew ]; then
+          echo "✓ gradlew found at android/gradlew"
+          chmod +x android/gradlew
+          ls -la android/gradlew
+        else
+          echo "✗ gradlew not found!"
+          exit 1
+        fi
+      
+    - name: Sync Capacitor to Android
+      run: npx cap sync android
+      
+    - name: Build Android with Gradle
+      run: cd android && ./gradlew build
